@@ -228,4 +228,5 @@ ERROR:  invalid GML representation
 #2001|POLYGON((0 0,0 1,1 1,0 0))
 #2112a|0|LINESTRING(2.5 2.5 1,2.5 2.5 1)
 #2112b|1|LINESTRING(1 1 1,1 0 1)
+#2108|SRID=3395;POINTM EMPTY
 #2117|SRID=3395;POINTM EMPTY
